--- a/package.json
+++ b/package.json
@@ -4,33 +4,47 @@
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "type": "module",
-  "scripts": {
-    "start": "electron .",
-    "build": "electron-builder"
-  },
   "author": "Air Corsica Virtuel",
   "license": "MIT",
+
+  "scripts": {
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+
   "dependencies": {
     "axios": "^1.6.8",
     "electron-store": "^9.0.0",
     "electron-updater": "^6.3.4",
     "sweetalert2": "^11.10.0"
   },
+
   "devDependencies": {
     "electron": "^28.2.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.13.3"
   },
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
+  },
+
   "build": {
     "appId": "com.aircorsica.acars",
     "productName": "ACARS Air Corsica Virtuel",
+    "copyright": "© 2025 Air Corsica Virtuel",
     "directories": {
       "buildResources": "assets",
       "output": "dist"
     },
-	  "repository": {
-    "type": "git",
-    "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
-  },
+    "files": [
+      "main.js",
+      "renderer.js",
+      "index.html",
+      "assets/**/*",
+      "package.json"
+    ],
     "publish": [
       {
         "provider": "github",
