mise a jours repo

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "C4PIT4IN3",
+        "owner": "C4P1T4IN3",
         "repo": "acarscorsicava"
       }
     ],
