--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "type": "module",
@@ -30,39 +30,46 @@
     "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
   },
 
-  "build": {
-    "appId": "com.aircorsica.acars",
-    "productName": "ACARS Air Corsica Virtuel",
-    "copyright": "© 2025 Air Corsica Virtuel",
-    "directories": {
-      "buildResources": "assets",
-      "output": "dist"
-    },
-    "files": [
-      "main.js",
-      "renderer.js",
-      "index.html",
-      "assets/**/*",
-      "package.json"
-    ],
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "C4P1T4IN3",
-        "repo": "acarscorsicava"
-      }
-    ],
-    "win": {
-      "target": "nsis",
-      "icon": "assets/logo.ico",
-      "requestedExecutionLevel": "asInvoker"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "ACARS Air Corsica"
+"build": {
+  "appId": "com.aircorsica.acars",
+  "productName": "ACARS Air Corsica Virtuel",
+  "copyright": "© 2025 Air Corsica Virtuel",
+  "directories": {
+    "buildResources": "assets",
+    "output": "dist"
+  },
+  "files": [
+    "main.js",
+    "preload.js",
+    "renderer.js",
+    "index.html",
+    "assets/**/*",
+    "modules/**/*",
+    "package.json"
+  ],
+  "publish": [
+    {
+      "provider": "github",
+      "owner": "C4PIT4IN3",
+      "repo": "acarscorsicava"
     }
+  ],
+  "win": {
+    "target": "nsis",
+    "icon": "assets/logo.ico",
+    "signingHashAlgorithms": ["sha256"],
+    "certificateFile": "C:/certificat_acars.pfx",
+    "certificatePassword": "acars123",
+    "publisherName": "Air Corsica Virtuel",
+    "requestedExecutionLevel": "asInvoker"
+  },
+  "nsis": {
+    "oneClick": false,
+    "allowToChangeInstallationDirectory": true,
+    "createDesktopShortcut": true,
+    "createStartMenuShortcut": true,
+    "shortcutName": "ACARS Air Corsica",
+    "artifactName": "ACARS_AirCorsica_${version}_Setup.${ext}"
   }
+}
 }
