--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "publish": [
     {
       "provider": "github",
-      "owner": "C4PIT4IN3",
+      "owner": "C4P1T4IN3",
       "repo": "acarscorsicava"
     }
   ],
