--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
   "license": "MIT",
-  "scripts": {
-    "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
-  },
-  "dependencies": {
-    "axios": "^1.13.0",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.3.4",
-    "sweetalert2": "^11.26.3",
-    "ws": "^8.18.3"
-  },
-  "devDependencies": {
-    "electron": "^28.2.0",
-    "electron-builder": "^24.13.3"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
   },
+
+  "scripts": {
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder --win --publish always"
+  },
+
+  "dependencies": {
+    "axios": "^1.6.8",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^6.3.4",
+    "sweetalert2": "^11.11.0",
+    "ws": "^8.18.3"
+  },
+
+  "devDependencies": {
+    "electron": "^28.2.0",
+    "electron-builder": "^24.13.3"
+  },
+
   "build": {
     "appId": "com.aircorsica.acars",
     "productName": "ACARS Air Corsica Virtuel",
     "copyright": "© 2025 Air Corsica Virtuel",
+
     "directories": {
       "buildResources": "assets",
       "output": "dist"
     },
+
     "files": [
       "main.js",
       "preload.js",
@@ -42,6 +48,7 @@
       "modules/**/*",
       "package.json"
     ],
+
     "publish": [
       {
         "provider": "github",
@@ -49,17 +56,15 @@
         "repo": "acarscorsicava"
       }
     ],
+
     "win": {
       "target": "nsis",
       "icon": "assets/logo.ico",
-      "signingHashAlgorithms": [
-        "sha256"
-      ],
-      "certificateFile": "C:/certificat_acars.pfx",
-      "certificatePassword": "acars123",
       "publisherName": "Air Corsica Virtuel",
+      "signingHashAlgorithms": ["sha256"],
       "requestedExecutionLevel": "asInvoker"
     },
+
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
