--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
@@ -29,58 +29,57 @@
     "electron-builder": "^24.13.3"
   },
 
-  "build": {
-    "appId": "com.aircorsica.acars",
-    "productName": "ACARS Air Corsica Virtuel",
-    "copyright": "© 2025 Air Corsica Virtuel",
+"build": {
+  "appId": "com.aircorsica.acars",
+  "productName": "ACARS Air Corsica Virtuel",
+  "copyright": "© 2025 Air Corsica Virtuel",
 
-    "directories": {
-      "buildResources": "assets",
-      "output": "dist"
-    },
+  "directories": {
+    "buildResources": "assets",
+    "output": "dist"
+  },
 
-    "files": [
-      "main.js",
-      "preload.js",
-      "renderer.js",
-      "index.html",
-      "assets/**/*",
-      "modules/**/*",
-      "package.json"
-    ],
+  "files": [
+    "main.js",
+    "preload.js",
+    "renderer.js",
+    "index.html",
+    "assets/**/*",
+    "modules/**/*",
+    "package.json"
+  ],
 
-    "asarUnpack": [
-      "node_modules/electron-updater",
-      "node_modules/electron-store"
-    ],
+  "asarUnpack": [
+    "node_modules/electron-updater",
+    "node_modules/electron-store"
+  ],
 
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "C4P1T4IN3",
-        "repo": "acarscorsicava"
-      }
-    ],
-
-"win": {
-  "target": [
+  "publish": [
     {
-      "target": "nsis-web",
-      "arch": ["x64"]
+      "provider": "github",
+      "owner": "C4P1T4IN3",
+      "repo": "acarscorsicava"
     }
   ],
-  "icon": "assets/logo.ico",
-  "publisherName": "Air Corsica Virtuel",
-  "signingHashAlgorithms": ["sha256"],
-  "requestedExecutionLevel": "asInvoker"
-},
-"nsisWeb": {
-  "artifactName": "ACARS_AirCorsica_${version}_WebSetup.${ext}",
-  "oneClick": false,
-  "createDesktopShortcut": true,
-  "createStartMenuShortcut": true,
-  "shortcutName": "ACARS Air Corsica",
-  "allowToChangeInstallationDirectory": true
-}
+
+  "win": {
+    "target": "nsis",
+    "icon": "assets/logo.ico",
+    "publisherName": "Air Corsica Virtuel",
+    "signingHashAlgorithms": ["sha256"],
+    "requestedExecutionLevel": "asInvoker",
+    "certificateFile": "C:/certificat_acars.pfx",
+    "certificatePassword": "acars123"
+  },
+
+  "nsis": {
+    "artifactName": "ACARS_AirCorsica_${version}_Setup.${ext}",
+    "oneClick": false,
+    "allowToChangeInstallationDirectory": true,
+    "createDesktopShortcut": true,
+    "createStartMenuShortcut": true,
+    "shortcutName": "ACARS Air Corsica Virtuel",
+    "deleteAppDataOnUninstall": false
   }
+}
 }
