--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
@@ -9,13 +9,11 @@
     "type": "git",
     "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
   },
-
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder --win --publish always"
   },
-
   "dependencies": {
     "axios": "^1.6.8",
     "electron-store": "^8.1.0",
@@ -23,63 +21,56 @@
     "sweetalert2": "^11.11.0",
     "ws": "^8.18.3"
   },
-
   "devDependencies": {
     "electron": "^28.2.0",
     "electron-builder": "^24.13.3"
   },
-
-"build": {
-  "appId": "com.aircorsica.acars",
-  "productName": "ACARS Air Corsica Virtuel",
-  "copyright": "© 2025 Air Corsica Virtuel",
-
-  "directories": {
-    "buildResources": "assets",
-    "output": "dist"
-  },
-
-  "files": [
-    "main.js",
-    "preload.js",
-    "renderer.js",
-    "index.html",
-    "assets/**/*",
-    "modules/**/*",
-    "package.json"
-  ],
-
-  "asarUnpack": [
-    "node_modules/electron-updater",
-    "node_modules/electron-store"
-  ],
-
-  "publish": [
-    {
-      "provider": "github",
-      "owner": "C4P1T4IN3",
-      "repo": "acarscorsicava"
+  "build": {
+    "appId": "com.aircorsica.acars",
+    "productName": "ACARS Air Corsica Virtuel",
+    "copyright": "© 2025 Air Corsica Virtuel",
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "preload.js",
+      "renderer.js",
+      "index.html",
+      "assets/**/*",
+      "modules/**/*",
+      "package.json"
+    ],
+    "asarUnpack": [
+      "node_modules/electron-updater",
+      "node_modules/electron-store"
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "C4P1T4IN3",
+        "repo": "acarscorsicava",
+        "releaseType": "release"
+      }
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "assets/logo.ico",
+      "publisherName": "Air Corsica Virtuel",
+      "signingHashAlgorithms": ["sha256"],
+      "requestedExecutionLevel": "asInvoker",
+      "certificateFile": "C:/certificat_acars.pfx",
+      "certificatePassword": "acars123"
+    },
+    "nsis": {
+      "artifactName": "ACARS_AirCorsica_${version}_Setup.${ext}",
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "ACARS Air Corsica Virtuel",
+      "deleteAppDataOnUninstall": false
     }
-  ],
-
-  "win": {
-    "target": "nsis",
-    "icon": "assets/logo.ico",
-    "publisherName": "Air Corsica Virtuel",
-    "signingHashAlgorithms": ["sha256"],
-    "requestedExecutionLevel": "asInvoker",
-    "certificateFile": "C:/certificat_acars.pfx",
-    "certificatePassword": "acars123"
-  },
-
-  "nsis": {
-    "artifactName": "ACARS_AirCorsica_${version}_Setup.${ext}",
-    "oneClick": false,
-    "allowToChangeInstallationDirectory": true,
-    "createDesktopShortcut": true,
-    "createStartMenuShortcut": true,
-    "shortcutName": "ACARS Air Corsica Virtuel",
-    "deleteAppDataOnUninstall": false
   }
-}
 }
