--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
   "license": "MIT",
+
   "repository": {
     "type": "git",
     "url": "https://github.com/C4P1T4IN3/acarscorsicava.git"
   },
+
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder --win --publish always"
   },
+
   "dependencies": {
     "axios": "^1.6.8",
     "electron-log": "^5.4.3",
@@ -22,18 +25,22 @@
     "sweetalert2": "^11.11.0",
     "ws": "^8.18.3"
   },
+
   "devDependencies": {
     "electron": "^28.2.0",
     "electron-builder": "^24.13.3"
   },
+
   "build": {
     "appId": "com.aircorsica.acars",
     "productName": "ACARS Air Corsica Virtuel",
     "copyright": "© 2025 Air Corsica Virtuel",
+
     "directories": {
       "buildResources": "assets",
       "output": "dist"
     },
+
     "files": [
       "main.js",
       "preload.js",
@@ -43,10 +50,13 @@
       "modules/**/*",
       "package.json"
     ],
+
     "asarUnpack": [
       "node_modules/electron-updater",
-      "node_modules/electron-store"
+      "node_modules/electron-store",
+      "node_modules/electron-log"
     ],
+
     "publish": [
       {
         "provider": "github",
@@ -55,17 +65,15 @@
         "releaseType": "release"
       }
     ],
+
     "win": {
       "target": "nsis",
       "icon": "assets/logo.ico",
       "publisherName": "Air Corsica Virtuel",
-      "signingHashAlgorithms": [
-        "sha256"
-      ],
       "requestedExecutionLevel": "asInvoker",
-      "certificateFile": "C:/certificat_acars.pfx",
-      "certificatePassword": "acars123"
+      "sign": false
     },
+
     "nsis": {
       "artifactName": "ACARS_AirCorsica_${version}_Setup.${ext}",
       "oneClick": false,
