--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
@@ -70,8 +70,7 @@
       "target": "nsis",
       "icon": "assets/logo.ico",
       "publisherName": "Air Corsica Virtuel",
-      "requestedExecutionLevel": "asInvoker",
-      "sign": false
+      "requestedExecutionLevel": "asInvoker"
     },
 
     "nsis": {
