--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acars-aircorsica",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "ACARS Air Corsica Virtuel pour MSFS / X-Plane",
   "main": "main.js",
   "author": "Air Corsica Virtuel",
@@ -80,7 +80,8 @@
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "shortcutName": "ACARS Air Corsica Virtuel",
-      "deleteAppDataOnUninstall": false
+      "deleteAppDataOnUninstall": false,
+	  "closeAppBeforeInstall": true
     }
   }
 }
